<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PendiriActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/colorAccent"
            android:padding="20dp">
            
            <ImageView
                android:id="@+id/PhotoPendiri"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/FullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/PhotoPendiri"
                android:fontFamily="sans-serif-black"
                android:includeFontPadding="false"
                android:textSize="20sp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" >

            <ImageView
                android:id="@+id/imgPerson"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="20dp"
                android:src="@drawable/user"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgPerson"
                android:layout_toRightOf="@id/imgPerson"
                android:drawablePadding="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Nama Lengkap" />

                <TextView
                    android:id="@+id/NamaPendiri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/nama_pendiri" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgNegara"
                android:padding="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/germany" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgNegara"
                android:layout_toRightOf="@id/imgNegara"
                android:drawablePadding="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Kebangsaan" />

                <TextView
                    android:id="@+id/kebangsaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/kebangsaan" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgToga"
                android:padding="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/graduation" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgToga"
                android:layout_toRightOf="@id/imgToga"
                android:drawablePadding="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Pendidikan" />

                <TextView
                    android:id="@+id/pendidikan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/pendidikan" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgLahir"
                android:padding="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/calendar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgLahir"
                android:layout_toRightOf="@id/imgLahir"
                android:drawablePadding="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Tanggal Lahir" />

                <TextView
                    android:id="@+id/kelahiran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/tgl_lahir" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgWafat"
                android:padding="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/calendar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/imgWafat"
                android:layout_toRightOf="@id/imgWafat"
                android:drawablePadding="30dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="Tanggal Wafat" />

                <TextView
                    android:id="@+id/wafat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/tgl_wafat" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>